objects/PPA_Bid__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Basis_Risk_Premium__c</fullName>
        <inlineHelpText>Premium added to the Base price, to account for risk associated with delivering power to a hub.</inlineHelpText>
        <label>Basis Risk Premium ($/MWh)</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bid_Amount__c</fullName>
        <inlineHelpText>The Contract Value for this particular Bid</inlineHelpText>
        <label>Bid Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Broker_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Broker Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>PPA Bids</relationshipLabel>
        <relationshipName>PPA_Bids</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>COD__c</fullName>
        <inlineHelpText>Commercial Operations Date</inlineHelpText>
        <label>COD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>TEXT(Project_Development__r.RES_Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DC_AC_Ratio__c</fullName>
        <label>DC/AC Ratio</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSP_Premium__c</fullName>
        <inlineHelpText>Premium added to the base price to account for risk associated with providing downside protection.</inlineHelpText>
        <label>DSP Premium ($/MWh)</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DSP_Type_Other__c</fullName>
        <inlineHelpText>($/MWh) 
Input a value in this field when “Other” is selected for the &apos;Downside Protection (DSP) Type&apos; field</inlineHelpText>
        <label>DSP Type -Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Point__c</fullName>
        <label>Delivery Point</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AEP</fullName>
                </value>
                <value>
                    <fullName>AEP-Day</fullName>
                </value>
                <value>
                    <fullName>Arkansas Hub</fullName>
                </value>
                <value>
                    <fullName>Dominion</fullName>
                </value>
                <value>
                    <fullName>EAI.CLWALD</fullName>
                </value>
                <value>
                    <fullName>ERCOT N/S Split</fullName>
                </value>
                <value>
                    <fullName>Houston Hub</fullName>
                </value>
                <value>
                    <fullName>Illinois Hub</fullName>
                </value>
                <value>
                    <fullName>Indiana Hub</fullName>
                </value>
                <value>
                    <fullName>LCRA Load Zone</fullName>
                </value>
                <value>
                    <fullName>Louisiana Hub</fullName>
                </value>
                <value>
                    <fullName>Michigan Hub</fullName>
                </value>
                <value>
                    <fullName>Minn Hub</fullName>
                </value>
                <value>
                    <fullName>Northern Illinois Hub</fullName>
                </value>
                <value>
                    <fullName>North Hub</fullName>
                </value>
                <value>
                    <fullName>PECO Zone</fullName>
                </value>
                <value>
                    <fullName>POI</fullName>
                </value>
                <value>
                    <fullName>PPL Zone</fullName>
                </value>
                <value>
                    <fullName>South Hub</fullName>
                </value>
                <value>
                    <fullName>SPP-North</fullName>
                </value>
                <value>
                    <fullName>SPP-South</fullName>
                </value>
                <value>
                    <fullName>Texas Hub</fullName>
                </value>
                <value>
                    <fullName>Transmission Rights Required</fullName>
                </value>
                <value>
                    <fullName>West Hub</fullName>
                </value>
                <value>
                    <fullName>Zone A</fullName>
                </value>
                <value>
                    <fullName>Zone B</fullName>
                </value>
                <value>
                    <fullName>Zone C</fullName>
                </value>
                <value>
                    <fullName>Zone E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Do_Not_Update_from_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Update from Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Downside_Protection_Type__c</fullName>
        <inlineHelpText>Protection that the client requests in case of exposure to negative pricing.   
If you select &apos;Other&apos;, please explain in the &apos;DSP Type -Other&apos; field.</inlineHelpText>
        <label>Downside Protection (DSP) Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Non-settlement below $0/MWh</fullName>
                </value>
                <value>
                    <fullName>$10/MWh Price Floor</fullName>
                </value>
                <value>
                    <fullName>$5/MWh Price Floor</fullName>
                </value>
                <value>
                    <fullName>$0/MWh Price Floor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fixed_Tracker__c</fullName>
        <label>Fixed/Track</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Tracker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GBDB_Update_Time__c</fullName>
        <label>GBDB Update Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latest_Update__c</fullName>
        <label>Latest Update</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <formula>&apos;City: &apos;&amp;Project_Development__r.Nearest_City__c &amp; 
&apos;   County: &apos;&amp;Project_Development__r.County__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Amount_Range__c</fullName>
        <inlineHelpText>If the Bid Amount, or the Contract Value, is within a certain range, use this field to indicate the maximum value.</inlineHelpText>
        <label>Max Amount Range</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Amount_Range__c</fullName>
        <inlineHelpText>If the Bid Amount, or the Contract Value, is within a certain range, use this field to indicate the minimum value.</inlineHelpText>
        <label>Min Amount Range</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NCF__c</fullName>
        <label>NCF</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NERC_Region__c</fullName>
        <label>NERC Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Caribbean</fullName>
                </value>
                <value>
                    <fullName>Chile-SIC</fullName>
                </value>
                <value>
                    <fullName>Chile-SING</fullName>
                </value>
                <value>
                    <fullName>Chile-Aysen</fullName>
                </value>
                <value>
                    <fullName>Chile-Magallanes</fullName>
                </value>
                <value>
                    <fullName>ERCOT</fullName>
                </value>
                <value>
                    <fullName>MISO</fullName>
                </value>
                <value>
                    <fullName>NEISO</fullName>
                </value>
                <value>
                    <fullName>NYISO</fullName>
                </value>
                <value>
                    <fullName>PJM</fullName>
                </value>
                <value>
                    <fullName>SPP</fullName>
                </value>
                <value>
                    <fullName>WECC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <formula>TEXT(Opportunity__r.Contract_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Project_Developements_Opportunties</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PPA_Escalation__c</fullName>
        <label>PPA Escalation</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PPA_Price__c</fullName>
        <label>PPA Price</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_Project_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Project Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PPA Bids</relationshipLabel>
        <relationshipName>PPA_Bids</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Development__c</fullName>
        <label>Project Development</label>
        <referenceTo>RES_Projects__c</referenceTo>
        <relationshipLabel>PPA Bids</relationshipLabel>
        <relationshipName>PPA_Bids</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <formula>Project_Development__r.Project_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Size__c</fullName>
        <formula>Project_Development__r.RES_Project_Size_MW__c</formula>
        <label>Project Size (MW)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposal_Due_Date__c</fullName>
        <label>Proposal Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Submitted_Date__c</fullName>
        <inlineHelpText>If left empty upon PPA Bid creation, this field will automatically be updated by the &apos;Proposal Due Date&apos;. Then after the PPA has been created this field can be overridden and you can select whatever date is appropriate.</inlineHelpText>
        <label>Proposal Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>REC_Type__c</fullName>
        <label>REC Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green-e</fullName>
                </value>
                <value>
                    <fullName>Ercot</fullName>
                </value>
                <value>
                    <fullName>M-RETS</fullName>
                </value>
                <value>
                    <fullName>MRECS</fullName>
                </value>
                <value>
                    <fullName>NAR</fullName>
                </value>
                <value>
                    <fullName>NEPOOL Class1</fullName>
                </value>
                <value>
                    <fullName>NEPOOL Class2</fullName>
                </value>
                <value>
                    <fullName>NC-RETS</fullName>
                </value>
                <value>
                    <fullName>NVTREC</fullName>
                </value>
                <value>
                    <fullName>NYSERDA</fullName>
                </value>
                <value>
                    <fullName>PJM-GATS</fullName>
                </value>
                <value>
                    <fullName>WREGIS</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>North - Wind</fullName>
                </value>
                <value>
                    <fullName>North - Solar</fullName>
                </value>
                <value>
                    <fullName>South - Wind</fullName>
                </value>
                <value>
                    <fullName>South - Solar</fullName>
                </value>
                <value>
                    <fullName>Canada - Wind</fullName>
                </value>
                <value>
                    <fullName>Canada - Solar</fullName>
                </value>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Selected_Bid__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this box if you would like to have the information from the Development Website, and the associated Project Development to update and override certain Opportunity fields.</inlineHelpText>
        <label>Selected Bid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Size_MW__c</fullName>
        <inlineHelpText>Bid Size</inlineHelpText>
        <label>Size (MW)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size_MWh__c</fullName>
        <label>Size MWh</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Phase__c</fullName>
        <inlineHelpText>The Status, or Phase, of the particular Bid.</inlineHelpText>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Closed Won - Not Selected</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
                <value>
                    <fullName>Negotiations</fullName>
                </value>
                <value>
                    <fullName>Notice of Award</fullName>
                </value>
                <value>
                    <fullName>Proposal Preparation</fullName>
                </value>
                <value>
                    <fullName>Proposal Submitted</fullName>
                </value>
                <value>
                    <fullName>Shortlist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>TEXT(Project_Development__r.State_Province__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology_Type__c</fullName>
        <formula>TEXT(Project_Development__r.RES_Technology_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Technology Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Yrs__c</fullName>
        <label>Term (Yrs)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transmission_Mileage__c</fullName>
        <label>Transmission Mileage</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upside_Share__c</fullName>
        <description>Percentage of the upside that goes to us, the seller.</description>
        <inlineHelpText>% of upside going to Seller</inlineHelpText>
        <label>Upside Share</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_Nameplate__c</fullName>
        <formula>Size_MW__c  /Project_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of Nameplate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>PPA Bid</label>
    <nameField>
        <displayFormat>#{000000}</displayFormat>
        <label>PPA Bid Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PPA Bids</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Closed_Won</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(Stage_Phase__c, &quot;Closed Won&quot;),
ISPICKVAL(Opportunity__r.Outcome_Reason__c, &quot;&quot;)
)</errorConditionFormula>
        <errorMessage>Please indicated Closed Outcome in the Parent Opportunity before marking this PPA Bid as Closed Won.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Downside_Risk_Protection_is_YesOther</fullName>
        <active>true</active>
        <description>If  &apos;Downside Protection (DSP) -Type&apos; = &apos;Yes- Other&quot;, then the User must input a value in the &apos;DSP Type -Other&apos; field</description>
        <errorConditionFormula>AND(
ISPICKVAL(Downside_Protection_Type__c,&quot;Yes- Other&quot;),
ISBLANK(DSP_Type_Other__c))</errorConditionFormula>
        <errorDisplayField>DSP_Type_Other__c</errorDisplayField>
        <errorMessage>You selected &apos;Yes- Other&apos; for the &apos;Downside Protection (DSP) -Type&apos;  field. Please input a value in the &apos;DSP Type -Other&apos; field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_one_Bid_Selected_Checked</fullName>
        <active>true</active>
        <errorConditionFormula>Opportunity__r.Selected_Bid_Count__c &gt; 1</errorConditionFormula>
        <errorDisplayField>Selected_Bid__c</errorDisplayField>
        <errorMessage>There is already another Opportunity with the &apos;Bid Selected&apos; field checked. If you would like to change which Project is mapped to this Opportunity, please navigate back to the &quot;Project / Opportunity&quot; and uncheck the appropriate record.</errorMessage>
    </validationRules>
</CustomObject>